--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_URL=https://viveksharma-porfolia.onrender.com
+REACT_APP_API_URL=https://mypersonalporfolio.onrender.com/api/register
